--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <!--Import Google Bangers Font-->
+    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
     
     <!--Import materialize.css-->
     <link
