--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,15 @@
     />
 
     <!--Import Google Bangers Font-->
-    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
-    
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Seymour+One&display=swap"
+      rel="stylesheet"
+    />
+
     <!--Import materialize.css-->
     <link
       type="text/css"
