--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Seymour+One&display=swap"
+      href="https://fonts.googleapis.com/css?family=Mouse+Memoirs&display=swap"
       rel="stylesheet"
     />
 
